--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,13 @@
     "pino-pretty": "^11.0.0",
     "postgres": "^3.4.3",
     "uuid": "^13.0.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
+    "zod": "^3.22.4",
+    "typescript": "^5.4.0",
     "@types/node": "^20.11.0",
     "@types/uuid": "^10.0.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.0"
+    "@types/events": "^3.0.3"
+  },
+  "devDependencies": {
+    "tsx": "^4.7.0"
   }
 }
