--- a/extension/package.json
+++ b/extension/package.json
@@ -12,11 +12,12 @@
     "postinstall": "wxt prepare || true"
   },
   "dependencies": {
-    "idb": "^8.0.0",
-    "@vaulttabs/shared": "*"
+    "@vaulttabs/shared": "*",
+    "canvas": "^3.2.1",
+    "idb": "^8.0.0"
   },
   "devDependencies": {
-    "wxt": "^0.19.0",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "wxt": "^0.19.0"
   }
 }
